--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     }
     img.responsive {
       max-width: 90%;
-      height: auto;
+      height: 400px;
       border-radius: 1em;
       margin: 1em 0;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
@@ -61,6 +61,25 @@
     .gallery img:hover {
       transform: scale(1.05);
     }
+    .gallery div p {
+      max-width: 250px;
+      word-wrap: break-word;
+      text-align: center;
+      margin: 0.5em auto;
+      font-size: 0.9em;
+      color: #555;
+      line-height: 1.4;
+    }
+    #about p {
+      max-width: 600px;
+      word-wrap: break-word;
+      text-align: center;
+      margin: 0.5em auto;
+      font-size: 1em;
+      color: #555;
+      line-height: 1.6;
+      padding: 0 1em;
+    }
     h1, h2, h3 {
       color: #333;
     }
@@ -71,27 +90,51 @@
 <nav>
   <button onclick="showPage('home')">หน้าแรก</button>
   <button onclick="showPage('about')">ประวัติผู้จัดทำ</button>
-  <button onclick="showPage('gallery')">ผลงาน</button>
+  <button onclick="showPage('gallery')">การศึกษา</button>
 </nav>
 
 <section id="home">
   <h1>Siriwat Prompat</h1>
   <p>Teachers of Phuketthaihua ASEAN Wittaya School</p>
-  <img src="myphoto.png" alt="โรงเรียน" class="responsive">
+  <img src="school.png" alt="โรงเรียน" class="responsive">
 </section>
 
 <section id="about" style="display:none;">
   <h2>ประวัติผู้จัดทำ</h2>
-  <p>ฉันเป็นช่างภาพทิวทัศน์และท่องเที่ยว เชี่ยวชาญในการถ่ายทอดความแตกต่างของฤดูกาลต่าง ๆ และเดินทางถ่ายภาพในที่ที่สวยงามทั่วโลก</p>
-  <img src="https://drive.google.com/uc?export=view&id=YOUR_ABOUT_IMAGE_ID" alt="Siriwat Prompat" class="responsive">
+  <p>
+    สวัสดีครับนักเรียนทุก ๆ คน <br>
+    ครูชื่อศิริวัฒน์ พรหมพัฒน์ ชื่อเล่น ครูอาร์ม <br>
+    ปัจจุบันเป็นครูผู้สอนสาระวิชาเทคโนโลยี <br>
+    โรงเรียนภูเก็ตไทยหัวอาเซียนวิทยา อำเภอเมืองภูเก็ต จังหวัดภูเก็ต <br>
+    สอนในระดับชั้นมัธยมศึกษาปีที่ 4-6 <br>
+    รับผิดชอบการสอน <br>
+    วิชาเทคโนโลยี วิชาการตัดต่อภาพยนตร์ วิชาการสร้างโฆษณา วิชา ioT (internet of things) 
+  </p>
+  <img src="myphoto.png" alt="Siriwat Prompat" class="responsive">
 </section>
 
 <section id="gallery" style="display:none;">
-  <h2>ผลงานภาพถ่ายฤดูหนาว</h2>
+  <h2>ประวัติการศึกษา</h2>
   <div class="gallery">
-    <img src="https://drive.google.com/uc?export=view&id=YOUR_GALLERY_IMAGE1_ID" alt="ความสุขในฤดูหนาว">
-    <img src="https://drive.google.com/uc?export=view&id=YOUR_GALLERY_IMAGE2_ID" alt="ความโดดเดี่ยวสีขาว">
-    <img src="https://drive.google.com/uc?export=view&id=YOUR_GALLERY_IMAGE3_ID" alt="คืนหนาวเหน็บ">
+    <div>
+      <img src="primary.png" alt="ประถมศึกษา">
+      <p>ระดับประถมศึกษา <br> โรงเรียนวัดบ้านใหม่ <br> อำเภอระโนด จังหวัดสงขลา<br>จบการศึกษาปี 2555</p>
+    </div>
+    <div>
+      <img src="secondary.png" alt="มัธยมศึกษา">
+      <p>ระดับมัธยมศึกษา <br> โรงเรียนระโนดวิทยา <br> อำเภอระโนด จังหวัดสงขลา<br>จบการศึกษาปี 2558</p>
+    </div>
+    <div>
+      <img src="college.png" alt="อาชีวะศึกษา">
+      <p>ระดับประกาศนียบัตรวิชาชีพ <br> วิทยาลัยเทคนิคหาดใหญ่ <br> อำเภอหาดใหญ่ จังหวัดสงขลา<br>จบการศึกษาปี 2561</p>
+    </div>
+    <div>
+      <img src="university.png" alt="อุดมศึกษา">
+      <p>ระดับปริญญาตรี <br> คณะครุศาสตร์อุตสาหกรรมและเทคโนโลยี <br> 
+        สาขาวิชาอิเล็กทรอนิกส์และโทรคมนาคม <br> 
+        มหาวิทยาลัยเทคโนโลยีราชมงคลศรีวิชัย วิทยาเขตสงขลา <br>
+        อำเภอเมือง จังหวัดสงขลา<br>จบการศึกษาปี 2567</p>
+    </div>
   </div>
 </section>
 
